5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3988/executions/1745_1538.log
== TEST (2019-05-15 14:51:16) 
-- CODE:
x = float(input("r: "))
k = int(input("i: "))
d = 0
t = 0
n = 2
while(t==k):
	m = (x**d)+(x**n)
	d = d + 2
	n = n + 2
	print(m)
-- ERROR:
File "XXXX", line 8
    if(k)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:51:51) 
-- CODE:
x = float(input("r: "))
k = int(input("i: "))
d = 0
t = 0
n = 2
while(t==k):
	m = (x**d)+(x**n)
	d = d + 2
	n = n + 2
	t = t + 1
	print(m)
-- ERROR:
File "XXXX", line 8
    if(k)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:57:18) 
-- CODE:
x = float(input("r: "))
k = int(input("i: "))
d = 0
t = 1
n = 2
while(t==k):
	m = (x**d)+(x**n)
	d = d + 2
	n = n + 2
	t = t + 1
	print(m)
-- ERROR:
File "XXXX", line 8
    if(k)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:13:06) 
-- CODE:
x = float(input("r: "))
k = int(input("i: "))
d = 0
t = 1
n = 2
while(k!=t):
	m = (x**d)+(x**n)
	d = d + 2
	n = n + 2
	t = t + 1
	print(m)
-- OUTPUT:
1.3136
0.4119449600000001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:13:33) 
-- CODE:
x = float(input("r: "))
k = int(input("i: "))
d = 0
t = 1
n = 2
while(k!=t):
	m = (x**d)+(x**n)
	d = d + 2
	n = n + 2
	t = t + 1
	print(m)
-- OUTPUT:
1.3136
0.4119449600000001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:14:00) 
-- CODE:
x = float(input("r: "))
k = int(input("i: "))
d = 0
t = 1
n = 2
while(k>t):
	m = (x**d)+(x**n)
	d = d + 2
	n = n + 2
	t = t + 1
	print(m)
-- OUTPUT:
1.3136
0.4119449600000001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:14:18) 
-- CODE:
x = float(input("r: "))
k = int(input("i: "))
d = 0
t = 1
n = 2
while(k>t):
	m = (x**d)+(x**n)
	d = d + 2
	n = n + 2
	t = t + 1
	print(m)
-- OUTPUT:
1.3136
0.4119449600000001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:15:15) 
-- CODE:
x = float(input("r: "))
k = int(input("i: "))
d = 0
t = 1
n = 2
while(k>t):
	m = (x**d)-(x**n)
	d = d + 2
	n = n + 2
	t = t + 1
	print(m)
-- OUTPUT:
0.6863999999999999
0.21525504
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:16:13) 
-- CODE:
x = float(input("r: "))
k = int(input("i: "))
d = 0
t = 0
n = 2
while(k>t):
	m = (x**d)-(x**n)
	d = d + 4
	n = n + 2
	t = t + 1
	print(m)
-- OUTPUT:
0.6863999999999999
0.0
-0.02116924829859841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:17:01) 
-- CODE:
x = float(input("r: "))
k = int(input("i: "))
d = 0
t = 0
n = 2
while(k>t):
	m = (x**d)-(x**n)
	d = d + 4
	n = n + 2
	t = t + 1
	print(m)
-- OUTPUT:
0.6863999999999999
0.0
-0.02116924829859841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:17:28) 
-- CODE:
x = float(input("r: "))
k = int(input("i: "))
d = 0
t = 0
n = 2
while(k>t):
	m = (x**d)-(x**n)
	d = d + 4
	n = n + 2
	t = t + 1
	print(m)
-- OUTPUT:
0.6863999999999999
0.0
-0.02116924829859841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:25:09) 
-- CODE:
x = float(input("r: "))
k = int(input("i: "))
d = 0
t = 0
n = 0
while(k>t):
	m = (x**(d)-(x**(d+2))
	d = d + 2
	t = t + 1
	print(m)
-- ERROR:
File "XXXX", line 8
    d = d + 2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:26:39) 
-- CODE:
x = float(input("r: "))
k = int(input("i: "))
d = 0
t = 0
n = 0
while(k>t):
	m = (x**(d))-(x**(d+2))
	d = d + 2
	print(m)
-- OUTPUT:
0.6863999999999999
0.21525504
0.06750398054400002
0.02116924829859841
0.006638676266440462
0.0020818888771557296
0.000652880351876037
0.0002047432783483252
6.42074920900348e-05
2.0135469519434917e-05
6.314483241294791e-06
1.980221944470047e-06
6.209976017858068e-07
1.9474484792002904e-07
6.107198430772113e-08
1.9152174278901348e-08
6.006121853863463e-09
1.8835198133715827e-09
5.906718134733284e-10
1.8523468070523584e-10
5.808959586916196e-11
1.8216897264569197e-11
5.7128189821689014e-12
1.7915400328081676e-12
5.618269542886416e-13
1.76188932864918e-13
5.5252849346438303e-14
1.7327293555043052e-14
5.433839258861503e-15
1.7040519915789672e-15
5.343907045591643e-16
1.6758492494975395e-16
5.255463246424285e-17
1.648113274078656e-17
5.168483227510667e-18
1.6208363401473452e-18
5.082942762702076e-19
1.5940108503833717e-19
4.9988180268022534e-20
1.5676293332051873e-20
4.916085588931467e-21
1.5416844406889086e-21
4.834722406000418e-22
1.5161689465217312e-22
4.7547058162921505e-23
1.49107574398
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:27:35) 
-- CODE:
x = float(input("r: "))
k = int(input("i: "))
d = 0
t = 0
n = 0
while(k>t):
	m = (x**(d))-(x**(d+2))
	d = d + 2
	print(m)
-- OUTPUT:
0.6863999999999999
0.21525504
0.06750398054400002
0.02116924829859841
0.006638676266440462
0.0020818888771557296
0.000652880351876037
0.0002047432783483252
6.42074920900348e-05
2.0135469519434917e-05
6.314483241294791e-06
1.980221944470047e-06
6.209976017858068e-07
1.9474484792002904e-07
6.107198430772113e-08
1.9152174278901348e-08
6.006121853863463e-09
1.8835198133715827e-09
5.906718134733284e-10
1.8523468070523584e-10
5.808959586916196e-11
1.8216897264569197e-11
5.7128189821689014e-12
1.7915400328081676e-12
5.618269542886416e-13
1.76188932864918e-13
5.5252849346438303e-14
1.7327293555043052e-14
5.433839258861503e-15
1.7040519915789672e-15
5.343907045591643e-16
1.6758492494975395e-16
5.255463246424285e-17
1.648113274078656e-17
5.168483227510667e-18
1.6208363401473452e-18
5.082942762702076e-19
1.5940108503833717e-19
4.9988180268022534e-20
1.5676293332051873e-20
4.916085588931467e-21
1.5416844406889086e-21
4.834722406000418e-22
1.5161689465217312e-22
4.7547058162921505e-23
1.49107574398
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:27:35) 
-- CODE:
x = float(input("r: "))
k = int(input("i: "))
d = 0
t = 0
n = 0
while(k>t):
	m = (x**(d))-(x**(d+2))
	d = d + 2
	print(m)
-- OUTPUT:
0.6863999999999999
0.21525504
0.06750398054400002
0.02116924829859841
0.006638676266440462
0.0020818888771557296
0.000652880351876037
0.0002047432783483252
6.42074920900348e-05
2.0135469519434917e-05
6.314483241294791e-06
1.980221944470047e-06
6.209976017858068e-07
1.9474484792002904e-07
6.107198430772113e-08
1.9152174278901348e-08
6.006121853863463e-09
1.8835198133715827e-09
5.906718134733284e-10
1.8523468070523584e-10
5.808959586916196e-11
1.8216897264569197e-11
5.7128189821689014e-12
1.7915400328081676e-12
5.618269542886416e-13
1.76188932864918e-13
5.5252849346438303e-14
1.7327293555043052e-14
5.433839258861503e-15
1.7040519915789672e-15
5.343907045591643e-16
1.6758492494975395e-16
5.255463246424285e-17
1.648113274078656e-17
5.168483227510667e-18
1.6208363401473452e-18
5.082942762702076e-19
1.5940108503833717e-19
4.9988180268022534e-20
1.5676293332051873e-20
4.916085588931467e-21
1.5416844406889086e-21
4.834722406000418e-22
1.5161689465217312e-22
4.7547058162921505e-23
1.49107574398
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:28:18) 
-- CODE:
x = float(input("r: "))
k = int(input("i: "))
d = 0
t = 0
n = 0
while(k>t):
	m = (x**(d))-(x**(d+2))
	d = d + 2
	t = t + 1
	print(m)
-- OUTPUT:
0.6863999999999999
0.21525504
0.06750398054400002
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:28:37) 
-- CODE:
x = float(input("r: "))
k = int(input("i: "))
d = 0
t = 0
n = 0
while(k>t):
	m = (x**(d))-(x**(d+2))
	d = d + 2
	t = t + 1
	print(m)
-- OUTPUT:
0.6863999999999999
0.21525504
0.06750398054400002
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:29:19) 
-- CODE:
x = float(input("r: "))
k = int(input("i: "))
d = 0
t = 0
n = 0
while(k>t):
	m = (x**(d))-(x**(d+4))
	d = d + 2
	t = t + 1
	print(m)
-- OUTPUT:
0.90165504
0.28275902054400004
0.08867322884259843
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:30:02) 
-- CODE:
x = float(input("r: "))
k = int(input("i: "))
d = 0
t = 0
n = 0
while(k>t):
	m = n +((x**(d))-(x**(d+4)))
	d = d + 2
	t = t + 1
	print(m)
-- OUTPUT:
0.90165504
0.28275902054400004
0.08867322884259843
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:30:10) 
-- CODE:
x = float(input("r: "))
k = int(input("i: "))
d = 0
t = 0
n = 0
while(k>t):
	m = n +((x**(d))-(x**(d+4)))
	d = d + 2
	t = t + 1
	print(m)
-- OUTPUT:
0.90165504
0.28275902054400004
0.08867322884259843
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:33:59) 
-- CODE:
x = float(input("r: "))
k = int(input("i: "))
d = 0
t = 0
n = 2
while(k>t):
	m = (x**d)-(x**n)
	j = m + m 
	d = d + 4
	n = n + 4
	t = t + 1
	print(j)
-- OUTPUT:
1.3727999999999998
0.13500796108800003
0.013277352532880924
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:34:08) 
-- CODE:
x = float(input("r: "))
k = int(input("i: "))
d = 0
t = 0
n = 2
while(k>t):
	m = (x**d)-(x**n)
	j = m + m 
	d = d + 4
	n = n + 4
	t = t + 1
	print(j)
-- OUTPUT:
1.3727999999999998
0.13500796108800003
0.013277352532880924
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:35:01) 
-- CODE:
x = float(input("r: "))
k = int(input("i: "))
d = 0
t = 0
n = 2
m = 0
while(k>t):
	m = m + ((x**d)-(x**n)) 
	d = d + 4
	n = n + 4
	t = t + 1
	print(m)
-- OUTPUT:
0.6863999999999999
0.7539039805439999
0.7605426568104403
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:35:56) 
-- CODE:
x = float(input("r: "))
k = int(input("i: "))
d = 0
t = 0
n = 2
m = 0
while(k>t):
	m = m + ((x**d)-(x**n)) 
	d = d + 4
	n = n + 4
	t = t + 1
	print(round(m, 8)
-- ERROR:
File "XXXX", line 13
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:36:31) 
-- CODE:
x = float(input("r: "))
k = int(input("i: "))
d = 0
t = 0
n = 2
m = 0
while(k>t):
	m = m + ((x**d)-(x**n)) 
	d = d + 4
	n = n + 4
	t = t + 1
	print(round(8, m)
-- ERROR:
File "XXXX", line 13
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:37:40) 
-- CODE:
x = float(input("r: "))
k = int(input("i: "))
d = 0
t = 0
n = 2
m = 0
while(k>t):
	m = m + ((x**d)-(x**n)) 
	d = d + 4
	n = n + 4
	t = t + 1
	print(round(m,  8))
-- OUTPUT:
0.6864
0.75390398
0.76054266
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:37:51) 
-- CODE:
x = float(input("r: "))
k = int(input("i: "))
d = 0
t = 0
n = 2
m = 0
while(k>t):
	m = m + ((x**d)-(x**n)) 
	d = d + 4
	n = n + 4
	t = t + 1
	print(round(m,  8))
-- EXECUTION TIME:
0.220902
-- TEST CASE 1:
---- input:
0.56
3
---- correct output:
0.78474496
---- user output:
0.6864
0.75390398
0.76054266
-- TEST CASE 2:
---- input:
0.62
4
---- correct output:
0.70656312
---- user output:
0.6156
0.70656312
0.72000414
0.72199023
-- TEST CASE 3:
---- input:
0.56
2
---- correct output:
0.6864
---- user output:
0.6864
0.75390398
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:38:34) 
-- CODE:
x = float(input("r: "))
k = int(input("i: "))
d = 0
t = 0
n = 2
m = 0
while(k>t):
	m = m + ((x**d)-(x**n)) 
	d = d + 4
	n = n + 4
	t = t + 1
	j = m
print(round(j,  8))
-- OUTPUT:
0.76054266
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:38:44) 
-- CODE:
x = float(input("r: "))
k = int(input("i: "))
d = 0
t = 0
n = 2
m = 0
while(k>t):
	m = m + ((x**d)-(x**n)) 
	d = d + 4
	n = n + 4
	t = t + 1
	j = m
print(round(j,  8))
-- EXECUTION TIME:
0.246858
-- TEST CASE 1:
---- input:
0.56
3
---- correct output:
0.78474496
---- user output:
0.76054266
-- TEST CASE 2:
---- input:
0.62
4
---- correct output:
0.70656312
---- user output:
0.72199023
-- TEST CASE 3:
---- input:
0.56
2
---- correct output:
0.6864
---- user output:
0.75390398
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:38:49) 
-- CODE:
x = float(input("r: "))
k = int(input("i: "))
d = 0
t = 0
n = 2
m = 0
while(k>t):
	m = m + ((x**d)-(x**n)) 
	d = d + 4
	n = n + 4
	t = t + 1
	j = m
print(round(j,  8))
-- OUTPUT:
0.76054266
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:39:23) 
-- CODE:
x = float(input("r: "))
k = int(input("i: "))
d = 0
t = 0
n = 2
m = 0
while(k>t):
	m = m + ((x**d)-(x**n)) 
	d = d + 4
	n = n + 4
	t = t + 1
	j = m
print(round(j,  8))
-- EXECUTION TIME:
0.199392
-- TEST CASE 1:
---- input:
0.56
3
---- correct output:
0.78474496
---- user output:
0.76054266
-- TEST CASE 2:
---- input:
0.62
4
---- correct output:
0.70656312
---- user output:
0.72199023
-- TEST CASE 3:
---- input:
0.56
2
---- correct output:
0.6864
---- user output:
0.75390398
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:39:32) 
-- CODE:
x = float(input("r: "))
k = int(input("i: "))
d = 0
t = 0
n = 2
m = 0
while(k>t):
	m = m + ((x**d)-(x**n)) 
	d = d + 4
	n = n + 4
	t = t + 1
	j = m
print(round(j,  8))
-- OUTPUT:
0.76054266
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:43:29) 
-- CODE:
x = float(input("r: "))
k = int(input("i: "))
d = 0
t = 0
n = 2
m = 0
while(k>t):
	m = m + ((x**d)-(x**n)) 
	d = d + 4
	n = n * 3
	t = t + 1
	j = m
print(round(j,  8))
-- OUTPUT:
0.76354638
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:44:39) 
-- CODE:
x = float(input("r: "))
k = int(input("i: "))
d = 0
t = 0
n = 2
m = 0
while(k>t):
	m = m + ((x**d)-(x**n)) 
	d = d + 4
	n = n + 4
	t = t + 1
	j = m
print(round(j,  8))
-- OUTPUT:
0.76054266
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:44:51) 
-- CODE:
x = float(input("r: "))
k = int(input("i: "))
d = 0
t = 0
n = 2
m = 0
while(k>t):
	m = m + ((x**d)-(x**n)) 
	d = d + 4
	n = n + 4
	t = t + 1
	j = m
print(round(j,  8))
-- OUTPUT:
0.76054266
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:49:02) 
-- CODE:
x = float(input("r: "))
k = int(input("i: "))
d = 0
t = 0
n = 2
m = 1
while(k>t):
	m = m + ((x**d)-(x**n)) 
	d = d + 4
	n = n + 4
	t = t + 1
	j = m
print(round(j,  8))
-- OUTPUT:
1.76054266
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:50:34) 
-- CODE:
x = float(input("r: "))
k = int(input("i: "))
d = 0
t = 0
n = 2
m = 0
while(k>t):
	m = m + ((x**d)-(x**n)) 
	d = d + 4
	n = n + 4
	t = t + 1
	j = m
print(round(j,  8))
-- OUTPUT:
0.76054266
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:54:07) 
-- CODE:
x = float(input("r: "))
k = int(input("i: "))
d = 0
t = 0

m = 0
while(k>t):
	m = m + (x**d) 
	d = d + 2
	t = t + 1
	j = m
print(round(j,  8))
-- OUTPUT:
1.41194496
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
